parser.output
Nonterminals useless in grammar

    method_clause


Terminals unused in grammar

    KERNEL
    TRAIN_SIZE
    SAVE_MODEL


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program statement

    3 statement: IMPORT STRING_LITERAL
    4          | PREPROCESS preprocessing
    5          | VISUALIZE visualize
    6          | MODEL model
    7          | MODEL AUTO_MODEL
    8          | MODEL STRING_LITERAL GAMMA '=' NUMBER C '=' NUMBER
    9          | TARGET STRING_LITERAL
   10          | SUMMARIZE
   11          | EXPORT STRING_LITERAL
   12          | SPLIT STRING_LITERAL
   13          | EVAL
   14          | SETFILE STRING_LITERAL

   15 preprocessing: STRING_LITERAL
   16              | STRING_LITERAL METHOD STRING_LITERAL

   17 visualize: STRING_LITERAL
   18          | X '=' STRING_LITERAL Y '=' STRING_LITERAL

   19 model: STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    '=' (61) 8 18
    error (256)
    NUMBER <num> (258) 8
    STRING_LITERAL <str> (259) 3 8 9 11 12 14 15 16 17 18 19
    IMPORT (260) 3
    PREPROCESS (261) 4
    VISUALIZE (262) 5
    MODEL (263) 6 7 8
    EXPORT (264) 11
    SPLIT (265) 12
    SUMMARIZE (266) 10
    SETFILE (267) 14
    KERNEL (268)
    AUTO_MODEL (269) 7
    X (270) 18
    Y (271) 18
    C (272) 8
    GAMMA (273) 8
    TRAIN_SIZE (274)
    METHOD (275) 16
    TARGET (276) 9
    SAVE_MODEL (277)
    EVAL (278) 13


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program <str> (26)
        on left: 1 2
        on right: 0 2
    statement <str> (27)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 2
    preprocessing <str> (28)
        on left: 15 16
        on right: 4
    visualize <str> (29)
        on left: 17 18
        on right: 5
    model <str> (30)
        on left: 19
        on right: 6


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • statement

    $end        shift, and go to state 2
    IMPORT      shift, and go to state 3
    PREPROCESS  shift, and go to state 4
    VISUALIZE   shift, and go to state 5
    MODEL       shift, and go to state 6
    EXPORT      shift, and go to state 7
    SPLIT       shift, and go to state 8
    SUMMARIZE   shift, and go to state 9
    SETFILE     shift, and go to state 10
    TARGET      shift, and go to state 11
    EVAL        shift, and go to state 12

    statement  go to state 13


State 2

    0 $accept: program $end •

    $default  accept


State 3

    3 statement: IMPORT • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 14


State 4

    4 statement: PREPROCESS • preprocessing

    STRING_LITERAL  shift, and go to state 15

    preprocessing  go to state 16


State 5

    5 statement: VISUALIZE • visualize

    STRING_LITERAL  shift, and go to state 17
    X               shift, and go to state 18

    visualize  go to state 19


State 6

    6 statement: MODEL • model
    7          | MODEL • AUTO_MODEL
    8          | MODEL • STRING_LITERAL GAMMA '=' NUMBER C '=' NUMBER

    STRING_LITERAL  shift, and go to state 20
    AUTO_MODEL      shift, and go to state 21

    model  go to state 22


State 7

   11 statement: EXPORT • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 23


State 8

   12 statement: SPLIT • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 24


State 9

   10 statement: SUMMARIZE •

    $default  reduce using rule 10 (statement)


State 10

   14 statement: SETFILE • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 25


State 11

    9 statement: TARGET • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 26


State 12

   13 statement: EVAL •

    $default  reduce using rule 13 (statement)


State 13

    2 program: program statement •

    $default  reduce using rule 2 (program)


State 14

    3 statement: IMPORT STRING_LITERAL •

    $default  reduce using rule 3 (statement)


State 15

   15 preprocessing: STRING_LITERAL •
   16              | STRING_LITERAL • METHOD STRING_LITERAL

    METHOD  shift, and go to state 27

    $default  reduce using rule 15 (preprocessing)


State 16

    4 statement: PREPROCESS preprocessing •

    $default  reduce using rule 4 (statement)


State 17

   17 visualize: STRING_LITERAL •

    $default  reduce using rule 17 (visualize)


State 18

   18 visualize: X • '=' STRING_LITERAL Y '=' STRING_LITERAL

    '='  shift, and go to state 28


State 19

    5 statement: VISUALIZE visualize •

    $default  reduce using rule 5 (statement)


State 20

    8 statement: MODEL STRING_LITERAL • GAMMA '=' NUMBER C '=' NUMBER
   19 model: STRING_LITERAL •

    GAMMA  shift, and go to state 29

    $default  reduce using rule 19 (model)


State 21

    7 statement: MODEL AUTO_MODEL •

    $default  reduce using rule 7 (statement)


State 22

    6 statement: MODEL model •

    $default  reduce using rule 6 (statement)


State 23

   11 statement: EXPORT STRING_LITERAL •

    $default  reduce using rule 11 (statement)


State 24

   12 statement: SPLIT STRING_LITERAL •

    $default  reduce using rule 12 (statement)


State 25

   14 statement: SETFILE STRING_LITERAL •

    $default  reduce using rule 14 (statement)


State 26

    9 statement: TARGET STRING_LITERAL •

    $default  reduce using rule 9 (statement)


State 27

   16 preprocessing: STRING_LITERAL METHOD • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 30


State 28

   18 visualize: X '=' • STRING_LITERAL Y '=' STRING_LITERAL

    STRING_LITERAL  shift, and go to state 31


State 29

    8 statement: MODEL STRING_LITERAL GAMMA • '=' NUMBER C '=' NUMBER

    '='  shift, and go to state 32


State 30

   16 preprocessing: STRING_LITERAL METHOD STRING_LITERAL •

    $default  reduce using rule 16 (preprocessing)


State 31

   18 visualize: X '=' STRING_LITERAL • Y '=' STRING_LITERAL

    Y  shift, and go to state 33


State 32

    8 statement: MODEL STRING_LITERAL GAMMA '=' • NUMBER C '=' NUMBER

    NUMBER  shift, and go to state 34


State 33

   18 visualize: X '=' STRING_LITERAL Y • '=' STRING_LITERAL

    '='  shift, and go to state 35


State 34

    8 statement: MODEL STRING_LITERAL GAMMA '=' NUMBER • C '=' NUMBER

    C  shift, and go to state 36


State 35

   18 visualize: X '=' STRING_LITERAL Y '=' • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 37


State 36

    8 statement: MODEL STRING_LITERAL GAMMA '=' NUMBER C • '=' NUMBER

    '='  shift, and go to state 38


State 37

   18 visualize: X '=' STRING_LITERAL Y '=' STRING_LITERAL •

    $default  reduce using rule 18 (visualize)


State 38

    8 statement: MODEL STRING_LITERAL GAMMA '=' NUMBER C '=' • NUMBER

    NUMBER  shift, and go to state 39


State 39

    8 statement: MODEL STRING_LITERAL GAMMA '=' NUMBER C '=' NUMBER •

    $default  reduce using rule 8 (statement)
